Enum flight_status {
  SCHEDULED
  DEPARTED
  CANCELLED
  COMPLETED
}

Enum seat_reservation_status {
  ACTIVE
  RELEASED
  EXPIRED
}

Enum booking_status {
  CONFIRMED
  CANCELLED
}

Table airlines {
  id uuid [pk]
  code varchar(8) [not null, unique]
  name varchar(255) [not null]
}

Table airports {
  code char(3) [pk]
  name varchar(255) [not null]
  city varchar(100) [not null]
  country varchar(100) [not null]
}

Table flights {
  id uuid [pk]
  flight_number varchar(16) [not null]
  airline_id uuid [not null, ref: > airlines.id]
  departure_airport_code char(3) [not null, ref: > airports.code]
  arrival_airport_code char(3) [not null, ref: > airports.code]

  departure_time timestamptz [not null]
  arrival_time timestamptz [not null]

  total_seats int [not null, check: `total_seats > 0`]
  available_seats int [not null, check: `available_seats >= 0`]

  price numeric(12,2) [not null, check: `price > 0`]
  status flight_status [not null]

  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (departure_airport_code, arrival_airport_code, departure_time)
  }

  checks {
    `available_seats <= total_seats`
    `arrival_time > departure_time`
    `departure_airport_code <> arrival_airport_code`
  }

  Note: 'Уникальность flight_number + date(departure_time) реализуется в PostgreSQL функциональным unique index'
}

Table seat_reservations {
  id uuid [pk]
  flight_id uuid [not null, ref: > flights.id]
  booking_id uuid [not null, unique]
  seats int [not null, check: `seats > 0`]
  status seat_reservation_status [not null]
  expires_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table bookings {
  id uuid [pk]
  user_id uuid [not null]
  flight_id uuid [not null]
  passenger_name varchar(255) [not null]
  passenger_email varchar(255) [not null]
  seat_count int [not null, check: `seat_count > 0`]
  total_price numeric(12,2) [not null, check: `total_price > 0`]
  status booking_status [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    user_id
    flight_id
  }
}
